# downloader

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: build.yml  publish.yml  release.yml  test.yml
src/: downloader.rs  example.rs  installer.rs  main.rs  old.rs  util.rs
