[package]
name = "downloader"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features=["rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
indicatif = "0.17.3"
dialoguer = "0.10.3"
regex = "1.7.1"
