[package]
name = "downloader"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "stream", "json"], default-features = false }
tokio = { version = "1", features = ["macros", "process", "fs", "signal", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
indicatif = "0.17"
dialoguer = "0.11"
regex = "1.10"
anyhow = "1.0"
tempfile = "3.10"
